--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ctitle: Sashidhar Bezawada
-logo: /images/Image1.png
+logo: /images/Image1.jpg
 description:
   <p align="left">
   Data Engineer and DataScience Graduate 
