--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
   <p align="left">
   Data Engineer and DataScience Graduate 
   <br><br>
-  <em>Highly-skilled Data Scientist with 19 years of experience in developing, implementation and optimization of data plumbing systems and ETL processes. Led multiple teams of  developers to implement data-driven solutions. Collaborated with data scientists and engineers to develop data pipelines. With strong business understanding and knowledge of Student Loans, Personal Loans, Credit cards and Banking domain..</em>
+  <em>Highly-skilled Data Enigneer with 19 years of experience in developing, implementation and optimization of data plumbing systems and ETL processes. Led multiple teams of  developers to implement data-driven solutions. Collaborated with data scientists and engineers to develop data pipelines. With strong business understanding and knowledge in Financial domain.</em>
   <br><br>
   </p>
 theme: jekyll-theme-minimal
