--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ description:
   <em>Highly-skilled Data Enigneer with 19 years of experience in developing, implementation and optimization of data plumbing systems and ETL processes. Led multiple teams of  developers to implement data-driven solutions. Collaborated with data scientists and engineers to develop data pipelines. With strong business understanding and knowledge in Financial domain.</em>
   <br><br>
   </p>
-theme: jekyll-theme-Cayman
+theme: jekyll-theme-minimal
