--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
   <p align="left">
   Data Engineer and DataScience Graduate 
   <br><br>
-  <em>Highly-skilled Data Enigneer with 19 years of experience in developing, implementation and optimization of data plumbing systems and data pipelines. With strong business understanding and knowledge in Financial domain.</em>
+  <em>Highly-skilled Data Enigneer with 19 years of experience in developing, implementation and optimization of data plumbing systems and data pipelines.</em>
   <br><br>
   </p>
 theme: jekyll-theme-minimal
