--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,4 @@
 title: Sashidhar Bezawada
 logo: /images/Image1.jpg
-description:
-  <p align="left">
-  Data Engineer and DataScience Graduate 
-  <br><br>
-  <em>Highly-skilled Data Enigneer with 19 years of experience in developing, implementation and optimization of data plumbing systems and data pipelines.</em>
-  <br><br>
-  </p>
+show_download: true
 theme: jekyll-theme-minimal
