--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Sashidhar Bezawada
 logo: /images/Image1.jpg
+description: Data Engineer with Graduatio in Data Science
 show_download: true
 theme: jekyll-theme-minimal
