--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Sashidhar Bezawada
-logo: /images/Image1.jpg
+title: <p align="left"> Sashidhar Bezawada </p>
+logo: "images/images/Image1.jpg?raw=true"
 description: Data Engineer with Graduation in Data Science
-show_download: true
 theme: jekyll-theme-minimal
