--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: <p align="left"> Sashidhar Bezawada </p>
-logo: "images/Image1.jpg?raw=true"
+logo: images/Image1.jpg
 description: Data Engineer with Graduation in Data Science
 theme: jekyll-theme-minimal
