--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: <p align="left"> Sashidhar Bezawada </p>
 logo: images/Image1.jpg
 description: Data Engineer (Data Science Graduate)
-theme: jekyll-theme-monophase
+theme: jekyll-theme-minimal
