--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 title: <p align="left"> Sashidhar Bezawada </p>
 logo: images/Image1.jpg
 description: Data Engineer (Data Science Graduate)
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme
+#theme: jekyll-theme-minimal
