--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 title: <p align="left"> Sashidhar Bezawada </p>
 logo: images/Image1.jpg
 description: Data Engineer (Data Science Graduate)
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
